# eyepy

./: .gitignore  README.rst  pyproject.toml
eyepy/: __init__.py  config.py
eyepy/core/: __init__.py  annotations.py  eyedata.py  eyevolume.py  meta.py
eyepy/data/: __init__.py
eyepy/io/: __init__.py  lazy.py  utils.py
eyepy/io/heyex/: xml_export.py
eyepy/quantification/: _drusen.py
eyepy/quantification/utils/: filter.py
tests/: test_eyepy.py
